--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -202,15 +202,15 @@ jobs:
               run: |
                   ./scripts/update-formula.rb
 
-            - name: Commit formula update to main
-              run: |
-                  if git diff --quiet -- Formula/supercet.rb; then
-                    echo "No formula changes detected."
-                    exit 0
-                  fi
-
-                  git config user.name "${{ github.actor }}"
-                  git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
-                  git add Formula/supercet.rb
-                  git commit -m "Update formula for version ${{ steps.version.outputs.version }}"
-                  git push origin HEAD:main
+            - name: Create PR for formula updates
+              uses: peter-evans/create-pull-request@v7
+              with:
+                  token: ${{ github.token }}
+                  commit-message: Update formula for version ${{ steps.version.outputs.version }}
+                  branch: automation/update-formula-v${{ steps.version.outputs.version }}
+                  delete-branch: true
+                  title: Update formula for version ${{ steps.version.outputs.version }}
+                  body: |
+                      Automated Homebrew formula update after release `v${{ steps.version.outputs.version }}`.
+                  add-paths: |
+                      Formula/supercet.rb
